--- a/resume/assets/css/style.css
+++ b/resume/assets/css/style.css
@@ -1,36 +1,276 @@
+/* CSS Custom Properties */
+
+:root{
+  --main-bg-color: #f3d1c7;
+  --secondary-bg-color: #e1b08f;
+  --primary-type-color: #1a1a1a;
+  --accent-color-1: #874e3b;
+}
+
+
+
 html {
-    box-sizing: border-box;
-  }
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
-  }
-  
-  /* ------ Typography -------*/
-  body {
-    font-family: "Open Sans", sans-serif;
-  }
-  
-  /* ------ Fluid Images -------*/
-  
-  
-  /* ------ Utility Classes  -------*/
-  
-  
-  /* ------ Helper Classes -------*/
-  .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap; /* 1 */
-  }
-  
-  /* ------ Global Styles -------*/
-  
-  
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+/* ------ Typography -------*/
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+/* ------ Fluid Images -------*/
+img {
+  max-width: 100%;
+}
+
+/* ------ Utility Classes  -------*/
+.container {
+  width: 420px; /* Design Time */
+  margin: 0 auto;
+  background: var(--secondary-bg-color);
+}
+
+/* ------ Helper Classes -------*/
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap; /* 1 */
+}
+
+/* ------ Global Styles -------*/
+
+body {
+  background: var(--main-bg-color);
+  color: var(--primary-type-color);
+  line-height: 1.6;
+}
+a:link,
+a:visited {
+  color: var(--primary-type-color);
+}
+
+img {
+  border: 5px double var(--accent-color-1);
+}
+
+nav {
+  padding: 1px;
+}
+
+nav ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 20px 20px 0px 20px;
+}
+
+nav li {
+  list-style-type: none;
+}
+
+nav a:link, nav a:visited {
+  display: block;
+  padding: 10px 16px;
+  border: 1px solid #000;
+  text-align: center;
+  text-decoration: none;
+  color: #6c74bf;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  background: rgba(108, 116, 191, 0.85);
+  transition: background-color 0.5s ease;
+  color: #ffffff;
+  font-family: 'Madimi One';
+}
+
+nav a:hover {
+  background: rgba(81, 86, 150, 0.95);
+}
+
+main {
+  padding: 1px 20px;
+}
+
+main h1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  font-weight: 400;
+  font-variant: small-caps;
+  font-family: 'Madimi One';
+  margin-top: 1rem;
+  margin-bottom: 0.1rem
+}
+
+
+main h1:before,
+main h1:after {
+  background-color: var(--accent-color-1);
+  content: "\a0";
+  flex-grow: 1;
+  height: 1px;
+  position: relative;
+  top: 1.6rem;
+}
+main h1:before {
+  margin-right: 5px;
+}
+main h1:after {
+  margin-left: 5px;
+}
+
+main h5 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  font-weight: 400;
+  font-variant: small-caps;
+  font-family: 'Madimi One';
+  line-height: 3.5;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+
+main h5:before,
+main h5:after {
+  background-color: var(--accent-color-1);
+  content: "\a0";
+  flex-grow: 0.5;
+  height: 1px;
+  position: relative;
+  top: 1.55rem;
+}
+main h5:before {
+  margin-right: 5px;
+}
+main h5:after {
+  margin-left: 5px;
+}
+
+dl {
+  display: grid;
+  /*shorthand*/
+  grid-template: repeat(8, auto) / 8em 1fr;
+  font-size:.9rem;
+}
+
+dt {
+  font-weight: 800;
+  grid-column: 1;
+  padding: 10px 0;
+  border-bottom: 1px solid var(--accent-color-1);
+}
+dd {
+  margin: 0;
+  grid-column: 2;
+  padding: 10px 0;
+  border-bottom: 1px solid var(--accent-color-1);
+}
+
+.related-links {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  gap:20px;
+}
+
+.related-links a {
+  border: 1px solid var(--accent-color-1);
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  color: #6c74bf;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  background: rgba(108, 116, 191, 0.85);
+  transition: background-color 0.5s ease;
+  color: #fff;
+  font-family: 'Madimi One';
+}
+
+.related-links .svg-inline--fa {
+  font-size: 1.8em;
+  padding-top: 7px;
+}
+
+.related-links a:hover {
+  background: rgba(81, 86, 150, 0.95);
+}
+
+.related-links li {
+
+}
+
+#skills {
+}
+#skills li {
+  list-style-type: square;
+}
+
+.job,
+.certificate {
+  border-bottom: 1px solid var(--accent-color-1);
+  padding-bottom: 20px;
+}
+
+.job *[itemprop="jobTitle"],
+.job *[itemprop="name"],
+.job *[itemprop="url"],
+.job *[itemprop="addressLocality"],
+.certificate *[itemprop="name"] {
+  display: block;
+}
+
+.job h3 {
+  margin: 20px 0 0 0;
+}
+
+footer {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.page-title {
+  grid-area: title;
+}
+.pronouns {
+  grid-area: pronouns;
+}
+#about {
+  grid-area: about;
+}
+#skills {
+  grid-area: skills;
+}
+#experience {
+  grid-area: experience;
+}
+#education {
+  grid-area: education;
+}
+
+main{
+  display:grid;
+  grid-template-areas:
+    "title"
+    "pronouns"
+    "about"
+    "education"
+    "experience"
+    "skills"
+    ;
+}
