--- a/resume/assets/css/style.css
+++ b/resume/assets/css/style.css
@@ -13,8 +13,8 @@ html {
   box-sizing: border-box;
 }
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -24,29 +24,18 @@ body {
 }
 
 /* ------ Fluid Images -------*/
+
 img {
   max-width: 100%;
 }
 
 /* ------ Utility Classes  -------*/
 .container {
-  width: 420px; /* Design Time */
+  width: 680px; /* Design Time */
   margin: 0 auto;
   background: var(--secondary-bg-color);
 }
 
-/* ------ Helper Classes -------*/
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap; /* 1 */
-}
 
 /* ------ Global Styles -------*/
 
@@ -60,25 +49,23 @@ a:visited {
   color: var(--primary-type-color);
 }
 
+.container {
+  margin: 0 auto;
+}
+
 img {
   border: 5px double var(--accent-color-1);
 }
 
 nav {
-  padding: 1px;
-}
-
-nav ul {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  margin: 0 auto;
   padding: 20px 20px 0px 20px;
 }
 
-nav li {
-  list-style-type: none;
-}
 
-nav a:link, nav a:visited {
+nav a:link,
+nav a:visited {
   display: block;
   padding: 10px 16px;
   border: 1px solid #000;
@@ -91,6 +78,8 @@ nav a:link, nav a:visited {
   transition: background-color 0.5s ease;
   color: #ffffff;
   font-family: 'Madimi One';
+  /* flex-grow | flex-basis */
+  flex: 1 25%;
 }
 
 nav a:hover {
@@ -114,8 +103,8 @@ main h1 {
 }
 
 
-main h1:before,
-main h1:after {
+main h1::before,
+main h1::after {
   background-color: var(--accent-color-1);
   content: "\a0";
   flex-grow: 1;
@@ -123,11 +112,11 @@ main h1:after {
   position: relative;
   top: 1.6rem;
 }
-main h1:before {
-  margin-right: 5px;
+main h1::before {
+  margin-right: 10px;
 }
-main h1:after {
-  margin-left: 5px;
+main h1::after {
+  margin-left: 10px;
 }
 
 main h5 {
@@ -144,8 +133,8 @@ main h5 {
 }
 
 
-main h5:before,
-main h5:after {
+main h5::before,
+main h5::after {
   background-color: var(--accent-color-1);
   content: "\a0";
   flex-grow: 0.5;
@@ -153,29 +142,31 @@ main h5:after {
   position: relative;
   top: 1.55rem;
 }
-main h5:before {
+main h5::before {
   margin-right: 5px;
 }
-main h5:after {
+main h5::after {
   margin-left: 5px;
 }
 
+#education{
+  margin-bottom: 10px;
+}
+
 dl {
-  display: grid;
-  /*shorthand*/
-  grid-template: repeat(8, auto) / 8em 1fr;
-  font-size:.9rem;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 dt {
+  flex: 1 25%;
   font-weight: 800;
-  grid-column: 1;
   padding: 10px 0;
   border-bottom: 1px solid var(--accent-color-1);
 }
 dd {
+  flex: 1 75%;
   margin: 0;
-  grid-column: 2;
   padding: 10px 0;
   border-bottom: 1px solid var(--accent-color-1);
 }
@@ -185,7 +176,6 @@ dd {
   justify-content: center;
   list-style: none;
   padding: 0;
-  gap:20px;
 }
 
 .related-links a {
@@ -212,7 +202,7 @@ dd {
 }
 
 .related-links li {
-
+  margin-right: 20px;
 }
 
 #skills {
@@ -244,87 +234,99 @@ footer {
   padding: 20px 0;
 }
 
-.page-title {
-  grid-area: title;
-}
-.pronouns {
-  grid-area: pronouns;
-}
-#about {
-  grid-area: about;
-}
-#skills {
-  grid-area: skills;
-}
-#experience {
-  grid-area: experience;
-}
-#education {
-  grid-area: education;
-}
-
-main{
-  display:grid;
-  grid-template-areas:
-    "title"
-    "pronouns"
-    "about"
-    "education"
-    "experience"
-    "skills"
-    ;
-}
-
 i{
   margin-right: 5px;
 }
 
-/*-----------------------Media Queries-------------------------------------*/
-
-@media screen and (min-width:768px) {
-
-  .container{
-    width: 680px;
-  }
-
-  main.container{
-    grid-template-columns: 36.5% auto;
-    grid-template-areas: 
-    "title title"
-    "pronouns pronouns"
-    "about about"
-    "skills experience"
-    ". education";
-    padding-bottom: 10px;
-  }
-
-  #about{
-    display: grid;
-    grid-template-columns: 250px 1fr auto;
-    gap: 2em;
-    grid-template-areas: 
-    "bio details details"
-    "related related related";
-  }
-
-  .bio{
-    grid-area: bio;
-  }
-  .details{
-    grid-area: details;
-  }
-  .related-links{
-    grid-area: related;
-    border-bottom: 1px solid var(--accent-color-1);
-    padding-bottom: 50px;
-  }
-
-  dl{
-    grid-template: repeat(8, auto) / 8em 1fr;
-  }
-  
-dd{
-  padding-bottom: 0;
+/* ------ Helper Classes -------*/
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap; /* 1 */
 }
 
+/* Reorder Source Using Flexbox */
+
+main.container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+main.container > * {
+  flex: 1 100%;
+}
+
+.page-title {
+  order: 0;
+}
+.pronouns{
+  order: 1;
+}
+#about {
+  order: 2;
+}
+#skills {
+  order: 4;
+}
+#experience {
+  order: 3;
+}
+#education {
+  order: 5;
+}
+
+/*-----------------------Media Queries-------------------------------------*/
+
+/*----------------------Media Queries-----------------------*/
+
+@media only screen and (min-width: 768px) {
+  
+  main.container {
+    max-width: 900px;
+  }
+  header.container {
+    max-width: 900px;
+  }
+  .page-title {
+  }
+  #skills {
+    padding-left: calc(30% + 40px);
+  }
+  #experience {
+    padding-left: calc(30% + 40px);
+  }
+  #education {
+    padding-left: calc(30% + 40px);
+  }
+  #about {
+    display: flex;
+    flex-flow: row wrap;
+  }
+
+  .bio {
+    flex: 1 30%;
+  }
+  .details {
+    flex: 1 70%;
+    padding-left: 40px;
+  }
+  .related-links {
+    border-bottom: 1px solid #999;
+    padding-bottom: 50px;
+    flex: 1;
+  }
+}
+
+/*----------------------Edge Case Tweaks-----------------------*/
+
+@media only screen and (max-width: 435px) {
+  .related-links li a svg {
+    display: none;
+  }
 }
