Updated flexbox code to work properly

--- a/resume/assets/css/style.css
+++ b/resume/assets/css/style.css
@@ -31,7 +31,7 @@ img {
 
 /* ------ Utility Classes  -------*/
 .container {
-  width: 680px; /* Design Time */
+  max-width: 680px; /* Design Time */
   margin: 0 auto;
   background: var(--secondary-bg-color);
 }
